--- a/tic-tac-toe.css
+++ b/tic-tac-toe.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 .grid {
     padding: 50px;
@@ -16,7 +18,7 @@ body {
     flex-wrap: wrap;
     margin-top: 50px;
 }
-.sqaure {
+.square {
     height: 100px;
     width: 100px;
     display: flex;
@@ -25,7 +27,9 @@ body {
     color: red;
     background-color: green;
     border: 2px solid black;
-}
+    font-size: larger;
+    text-align: center;
+} 
 
 
 
