--- a/tic-tac-toe.css
+++ b/tic-tac-toe.css
@@ -1,23 +1,33 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-
+    font-family: 'Roboto', sans-serif;
+    background-color: #89CFF0;
+    /* Baby blue color */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
+
 .grid {
     padding: 50px;
     height: fit-content;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+
 #gameBoard {
     width: 400px;
     display: flex;
     flex-wrap: wrap;
     margin-top: 50px;
+    align-items: center;
+    justify-content: center;
 }
+
 .square {
     height: 100px;
     width: 100px;
@@ -29,8 +39,16 @@ body {
     border: 2px solid black;
     font-size: larger;
     text-align: center;
-} 
+}
 
-
-
-
+#play-again {
+    padding: 10px 20px;
+    background-color: white;
+    /* White color */
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+    margin: 20px auto;
+    display: block;
+    font-size: 18px;
+}
